--- a/testing firebase.html
+++ b/testing firebase.html
@@ -249,27 +249,18 @@ span {
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js";
 import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-database.js";
  
-// Paste the code from Firebase
-var config = {
 
-    apiKey: "AIzaSyBOTroddOi3fooiZGYCQNSVaWcwGaOOIuo",
-
-    authDomain: "sampleproject-c497a.firebaseapp.com",
-
-  databaseURL: https://sampleproject-35844-default-rtdb.asia-southeast1.firebasedatabase.app/
-:"users"
-
-    projectId: "sampleproject-c497a",
-
-    storageBucket: "sampleproject-c497a.appspot.com",
-
-    messagingSenderId: "337232180219",
-
-    appId: "1:337232180219:web:3a103a327d95bb6311115e",
-
-    measurementId: "G-2CSH46FNDB"
-
-  };
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyC7R7wGO2iRWReCLN30ZHGYiqz3DX65apQ",
+  authDomain: "sampleproject-35844.firebaseapp.com",
+  databaseURL: "https://sampleproject-35844-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "sampleproject-35844",
+  storageBucket: "sampleproject-35844.appspot.com",
+  messagingSenderId: "482928065876",
+  appId: "1:482928065876:web:93c6320303e306697d5cc1",
+  measurementId: "G-FRDFRWGW5G"
+};
 
 firebase.initializeApp(config);
 
