--- a/testing firebase.html
+++ b/testing firebase.html
@@ -251,10 +251,11 @@ import { getDatabase, ref, set, get, child } from "https://www.gstatic.com/fireb
  
 
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
+var config = {
   apiKey: "AIzaSyC7R7wGO2iRWReCLN30ZHGYiqz3DX65apQ",
   authDomain: "sampleproject-35844.firebaseapp.com",
-  databaseURL: "https://sampleproject-35844-default-rtdb.asia-southeast1.firebasedatabase.app",
+  databaseURL: "https://sampleproject-35844-default-rtdb.asia-southeast1.firebasedatabase.app/
+:"users"",
   projectId: "sampleproject-35844",
   storageBucket: "sampleproject-35844.appspot.com",
   messagingSenderId: "482928065876",
